# facefindr

./: .dockerignore  .env  .gitignore  Dockerfile  IMPLEMENTATION_SUMMARY.md  README.md  SECURE_REGISTRATION.md  config.py  database.py  docker-compose.yml  extensions.py  main.py  models.py  pyproject.toml  reset_password.py
alembic/: env.py
alembic/versions/: 4f921aaa1892_drop_event_name_and_photo_video.py  9f97c40b2176_add_user_id_to_event_name.py  fe8b1051ec7f_initial.py  initial_complete_schema.py
auth/: app.py
auth/templates/: auth.html  register.html
cms/: app.py
cms/templates/: cms.html
download/: app.py
download/templates/: download.html
services/: minio_service.py
static/js/: auth.js  cms.js  download.js  register.js
utils/: face_verif.py  insight_face.py
